svc.yml
kind: Service
apiVersion: v1
metadata:
  name: flaskapp
  labels:
    app: svcflask
spec:
  selector:
    app: lay
  ports:
  - targetPort: 5000
    port: 80
    name: port80
