ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: flaskapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp
            port:
              number: 80
